--- a/proyecto_integrador3/src/main/resources/application.properties
+++ b/proyecto_integrador3/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/estetica?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=17911977
+spring.datasource.driver.class=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.open-in-view = false
