se crearon archivos hmtl

--- a/proyecto_integrador3/src/main/resources/application.properties
+++ b/proyecto_integrador3/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db-integrador3?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/estetica?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=17911977
 spring.datasource.driver.class=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
